Index link and cleanup
Added quick link to Github repository on index.
Removed unused commented out code in CloudGenerator.cs.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 	<body>
 		<h1>Carl Childer's Code Portfolio</h1>
-		<p>Code that I wrote for my game projects</p>
+		<p>Code that I wrote for my game projects: <a href="https://github.com/marooncarl/marooncarl.github.io">Github page</a></p>
 	</body>
 </html>
