Changed index to link to the same projects that were on my Codepen portfolio.
Added subtitle and rough bio at bottom.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Carl Childer's Code Portfolio</h1>
-		<p>Code that I wrote for my game projects: <a href="https://github.com/marooncarl/marooncarl.github.io">Github page</a></p>
+		<h1>Carl Childers</h1>
+		<h2>Web Developer</h2>
+		<div class="work">
+			<a href="https://codepen.io/carlchil/full/wjOGgK/" target="_blank">
+				<img src="https://images2.imgbox.com/43/15/ZsU5KKnx_o.jpg" alt="Random Quote Machine">
+			</a>
+			<a href="https://codepen.io/carlchil/full/erePYK/" target="_blank">
+				<img src="https://images2.imgbox.com/04/eb/wNaPsqMb_o.jpg" alt="Cake Builder">
+			</a>
+			<a href="https://codepen.io/carlchil/full/NBaJwB/" target="_blank">
+				<img src="https://images2.imgbox.com/d1/25/q7UWQ0LG_o.jpg" alt="Drum Machine">
+			</a>
+			<a href="https://codepen.io/carlchil/full/vaqrXK/" target="_blank">
+				<img src="https://images2.imgbox.com/08/26/y1zJ6uyM_o.jpg" alt="Pomodoro Clock">
+			</a>
+			<a href="https://codepen.io/carlchil/full/vaQKdm/" target="_blank">
+				<img src="https://images2.imgbox.com/89/b0/fBJilDqN_o.jpg" alt="Calculator">
+			</a>
+			<a href="https://codepen.io/carlchil/full/gKMpWd/" target="_blank">
+				<img src="https://images2.imgbox.com/9e/e2/gtY7iDxp_o.jpg" alt="Specialty Corks Landing Page">
+			</a>
+		</div>
 	</body>
+	<footer>
+		Hi, I'm Carl Childers, and I'm a gamer at heart.
+	</footer>
 </html>
