--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 		</div>
 	</body>
 	<footer>
-		Hi, I'm Carl Childers, and I'm a gamer at heart.
+		<p>Hi, I'm Carl Childers, and I'm a gamer at heart.</p>
 	</footer>
 </html>
