Added padding around title and subtitle, requiring scrolling down to see portfolio.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 	<link rel="stylesheet" href="portfolio.css">
 	<body>
-		<h1>Carl Childers</h1>
-		<h2>Web Developer</h2>
+		<header>
+			<h1>Carl Childers</h1>
+			<h2>Web Developer</h2>
+		</header>
 		<div class="work">
 			<a href="https://codepen.io/carlchil/full/wjOGgK/" target="_blank">
 				<img src="https://images2.imgbox.com/43/15/ZsU5KKnx_o.jpg" alt="Random Quote Machine">
