Added photo to footer.
Also changed footer to not take up the whole width of the screen.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		</div>
 	</body>
 	<footer>
+		<img class="photo" src="https://u.cubeupload.com/maroon_carl/photocarl2400x400.jpg">
 		<p>Hi, I'm Carl Childers, and I'm a gamer at heart.</p>
 	</footer>
 </html>
