Added info on which techs were used for each porfolio item, displayed on hover.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
 			<a href="https://codepen.io/carlchil/full/wjOGgK/" target="_blank">
 				<h3>Random Quote Machine</h3>
 				<img src="https://images2.imgbox.com/43/15/ZsU5KKnx_o.jpg" alt="Random Quote Machine">
+				<p>HTML, SCSS, jQuery</p>
 			</a>
 			<a href="https://codepen.io/carlchil/full/erePYK/" target="_blank">
 				<h3>Cake Builder</h3>
 				<img src="https://images2.imgbox.com/04/eb/wNaPsqMb_o.jpg" alt="Cake Builder">
+				<p>HTML, SCSS, React</p>
 			</a>
 			<a href="https://codepen.io/carlchil/full/NBaJwB/" target="_blank">
 				<h3>Drum Machine</h3>
 				<img src="https://images2.imgbox.com/d1/25/q7UWQ0LG_o.jpg" alt="Drum Machine">
+				<p>HTML, SCSS, React</p>
 			</a>
 			<a href="https://codepen.io/carlchil/full/vaqrXK/" target="_blank">
 				<h3>Pomodoro Clock</h3>
 				<img src="https://images2.imgbox.com/08/26/y1zJ6uyM_o.jpg" alt="Pomodoro Clock">
+				<p>HTML, SCSS, React</p>
 			</a>
 			<a href="https://codepen.io/carlchil/full/vaQKdm/" target="_blank">
 				<h3>Calculator</h3>
 				<img src="https://images2.imgbox.com/89/b0/fBJilDqN_o.jpg" alt="Calculator">
+				<p>HTML, SCSS, React</p>
 			</a>
 			<a href="https://codepen.io/carlchil/full/gKMpWd/" target="_blank">
 				<h3>Landing Page</h3>
 				<img src="https://images2.imgbox.com/9e/e2/gtY7iDxp_o.jpg" alt="Specialty Corks Landing Page">
+				<p>HTML, CSS</p>
 			</a>
 		</div>
 	</body>
